Add LoRA finetuning and data preparation utilities
- Add train_lora.py: Parameter-efficient LoRA finetuning implementation
- Add test_lora_model.py: Script to test LoRA fine-tuned models
- Add prepare_data.py: Data preprocessing from transcript JSON + audio
- Add pretokenize_parallel.py: Parallel pre-tokenization support
- Add pretrim_audio_fast.py: Audio trimming utility
- Add inspect_dataset.py & view_original_data.py: Dataset inspection tools
- Add run_lora_training.sh: Training launcher script
- Add configs/finetune_small_dataset.yaml: Config for small datasets
- Update README.md: Add LoRA documentation and simplified usage guide
- Update .gitignore: Ignore model checkpoints, experiments, and large data files
- Update utils.py: Improve checkpoint loading and extend audio generation limit
- Update configs/finetune_param_defaults.yaml: Add comments and tune hyperparameters

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,18 @@ speechmatics*.py
 sweep/
 default_old.yaml
 *.wav
+*.mp3
 french/
 gen.ipynb
 .env
 speechmatics.sh
+.ipynb_checkpoints/
+.claude/
+model/
+experiments/
+prepared_data/
+edited_segments.json
+test_sentences.txt
+audio_editor*.py
+*.pt
+*.hdf5
