--- a/configs/finetune_param_defaults.yaml
+++ b/configs/finetune_param_defaults.yaml
@@ -1,8 +1,9 @@
-batch_size: 8
-grad_acc_steps: 1
-learning_rate: 0.00003
-max_grad_norm: 1.3
-warmup_steps: 1000
-weight_decay: 0.002
-lr_decay: linear
-decoder_loss_weight: 0.5
+batch_size: 8           # Good for A100 with 26K samples
+grad_acc_steps: 1          # Effective batch = 8
+learning_rate: 0.00004     # Conservative for finetuning
+max_grad_norm: 1.3         # Gradient clipping
+warmup_steps: 700         # Gradual warmup
+weight_decay: 0.0015        # Regularization
+lr_decay: linear           # Linear decay after warmup
+decoder_loss_weight: 0.5   # Balance text/audio loss
+
